styles.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Roboto', sans-serif;
}

body {
    background-color: black;
}

.container {
    max-width: 1350px;
    height: 100vh;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(1, 1fr);
    margin: auto;
}

.title-side {
    height: 100%;
    background-image: url(./jimmy-chang-LP5WXkrnxX0-unsplash.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    grid-column: 1/3;
    position: relative;
}

.title {
    background-color: rgba(0, 5, 1, 0.5);
    font-family: cursive;
    padding: 10px;
    color: white;
    width: 100%;
    text-align: center;
    position: absolute;
    top: 25%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 55px;
    font-weight: bold;
}

.title img {
    max-width: 70px;
}

.photo-credit {
    position: absolute;
    font-weight: 300;
    bottom: 10px;
    color: white;
    font-size: 12px;
    left: 50%;
    margin-left: -96px;
}

.photo-credit a:visited {
    color: white;
}


.sign-up-side {
    background-color: rgba(249,250,251,255);
    padding-left: 40px;
    padding-right: 100px;
    grid-column: 3/6;
    display: flex;
    flex-direction: column;
    justify-content:center;
}

.slogan {
    font-size: 19px;
    font-weight: 500;
    margin-top: -90px;
}

.sign-up-form {
    margin: 70px -100px 30px -40px;
    padding: 15px 100px 15px 40px;
    background-color: white;
    box-shadow: -1px 2px 5px rgb(192, 190, 190);
    font-size: 12px;
    font-weight: bold;
    letter-spacing: 2px;
}

.sign-up-header {
    font-size: 21px;
    font-weight: bold;
    margin-bottom: 20px;
}

form {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 10px;
    row-gap: 3px;
}

p input {
    margin-top: 3px;
    padding: 2px 2px 2px 3px;
    width: 90%;
    max-width: 250px;
}

.create-account-section input {
    margin-top: 3px;
    padding: 2px 2px 2px 3px;
    width: 175px;
    height: 38px;
    background-color: rgba(41,136,70,255);
    color: white;
    font-weight: 600;
    border-radius: 6px;
    border: none;
    box-shadow: 1px 3px 2px black;
}

.create-account-section input:hover {
    cursor: pointer;
    background-color: rgba(77,171,85,255);
}

.create-account-section a {
    text-decoration: none;
    color: rgba(48,151,59,255);
    font-weight: bold;
}

.create-account-section a:visited {
    text-decoration: none;
    color: rgba(48,151,59,255);
    font-weight: bold;
}

.login {
    margin-top: 25px;
    padding-bottom: 25px;
}


@media (max-width: 951px) {
    .container {
        width: 100%;
        grid-template-columns: 1fr;
    }

    .title-side {
        height: 250px;
        grid-column: 1;
        width: 100%;
    }

    .sign-up-side {
        grid-column: 1;
    }

    .slogan {
        margin-top: 0;
        padding-top: 50px
    }

    .sign-up-form {
        padding-right: 50px;
    }

    label {
        font-size: 8px;
    }

    .create-account-section {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
    
}

